# flask-starter

./: .gitignore  README.md  development.cfg  pyproject.toml
app/services/: user_service.py
app/web/: __init__.py  run.py
app/web/static/: package-lock.json  package.json
app/web/static/css/: app.css
app/web/templates/: base.html  error.html
app/web/templates/components/forms/: textinput.html
app/web/templates/index/: index.html
app/web/templates/users/: login.html
app/web/utils/: acl.py  error_handling.py  template_filters.py
app/web/views/: __init__.py  index.py  user_view.py  users.py
scripts/: run-web  setup
webapp/web/: __init__.py
webapp/web/templates/base/: default_page.j2
webapp/web/templates/components/forms/: form_renderer.j2
webapp/web/templates/index/: index.j2
webapp/web/templates/users/: login.j2  register.j2
webapp/web/views/: __init__.py  index_view.py  user_view.py
