[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jakee <jakee.indapanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
flask = ">=3.1.0,<4.0.0"
flask-mongoengine-3 = "^1.1.0"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
flask-wtf = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-web = "app.web.run:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "N", "UP", "SIM", "PERF"]

[tool.ruff.format]
quote-style = "double"